<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >


    <TextView
        android:id="@+id/activity_main__text_spisok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_spisok"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main__rv_students"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main__text_spisok"
        />

    <Button
        android:id="@+id/activity_main__button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:backgroundTint="@color/btn_add_color"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/activity_main__rv_students"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nestedConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="365dp"
        app:layout_constraintTop_toBottomOf="@id/activity_main__button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
>


        <RadioGroup
            android:id="@+id/activity_main_rg_gender"
            android:layout_width="105dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toEndOf="@id/activity_main__text_student"
            app:layout_constraintTop_toTopOf="@id/activity_main__text_student"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"


            >

        <RadioButton
            android:id="@+id/activity_main__male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_radiobtn"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/activity_main__female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_radiobtn"
            android:textSize="20sp"/>

    </RadioGroup>







        <View
            android:id="@+id/activity_main__line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"

        />

        <TextView
            android:id="@+id/activity_main__text_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_student"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/activity_main__line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <ImageView
            android:id="@+id/activity_main__image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main__text_student"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="90dp"/>



        <EditText
            android:id="@+id/activity_main__edit_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="Имя"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_main__image"
            app:layout_constraintTop_toTopOf="@id/activity_main__text_student"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:maxLength="11"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="110dp"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/activity_main__edit_surname"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="Фамилия"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_main__image"
            app:layout_constraintTop_toBottomOf="@id/activity_main__edit_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:maxLength="20"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="120dp"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/activity_main__button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:backgroundTint="@color/btn_save_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="70dp"

            />

        <Button
            android:id="@+id/activity_main__button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:backgroundTint="@color/btn_save_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/activity_main__button_save"
            android:layout_marginStart="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"/>







    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>